--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+body {
+  background-color: #282c34;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  border: 1px solid aqua;
+  padding: 2vh;
+  width: 50vh;
+  margin-top: 10vh;
+  color: white;
+
+}
+
+#result {
+  margin-inline: auto;
+  margin-bottom: 3vh;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttons-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.button {
+  margin-inline: 0.4vh;
+  width: 10vh;
+  height: 3vh;
+  background-color: #282c34;
+  border: 1px solid aqua;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover {
+  background-color: aqua;
+  color: #282c34;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button:last-of-type {
+  margin-inline: 0.4vh;
+  width: 10vh;
+  height: 3vh;
+  background-color: #282c34;
+  border: 1px solid red;
+  color: white;
+}
+
+.button:hover:last-of-type {
+  background-color: red;
+  cursor: pointer;
 }
